agregamos foto de perfil y cabecera.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,15 @@
     </div>
 </nav>
 
-<h4 class="text-uppercase mb-4">Alberto Zepeda</h4>
+<header class="masthead bg-primary text-white text-center">
+    <div class="container">
+        <img class="img-fluid mb-5 d-block mx-auto rounded-circle" src="img/profile.png" alt="">
+        <h1 class="text-uppercase mb-0">Alberto Zepeda</h1>
+        <hr class="star-light">
+        <h2 class="font-weight-light mb-0">Ingeniero en sistemas | Desarrollador WEB | Entusiasta de Linux |
+            Humanitario</h2>
+    </div>
+</header>
 
 </body>
 </html>
