agregamos css complementarios

--- a/index.html
+++ b/index.html
@@ -60,6 +60,22 @@
             Humanitario</h2>
     </div>
 </header>
+<section class="portfolio" id="sobremi">
+    <div class="container">
+        <h2 class="text-center text-uppercase text-secondary">Sobre mí</h2>
+        <hr class="star-dark mb-5">
+        <div class="row">
+            <div class="text-justify">
 
+                <p class="lead text-secondary">
+                    Mi nombre es Alberto Zepeda, soy una persona a la que le interesa la tecnología por lo cual decidí estudiar una carrera profesional referente a eso. Mi principal interes es en el desarrollo
+                </p>
+
+                <img src="img/nyc1.jpg" class="img-thumbnail img-responsive center-block" style="width: 50%" alt="Foto con Martin Lindstorm en WBF de WOBI en NYC 2016">
+            </div>
+        </div>
+    </div>
+
+</section>
 </body>
 </html>
