--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <img src="img/edicom.png" class="mr-3" alt="website de EDICOM">
             </a>
             <div class="media-body">
-                <h5 class="mt-0">EDICOM Junio 2018- Junio 2019</h5>
+                <h5 class="mt-0">EDICOM Junio 2018- Actualidad</h5>
                 <h6 class="mt-0"> Consultor EDI</h6>
                 Encargado de implementar las soluciones de EDICOM que
             </div>
