--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
         <img class="img-fluid mb-5 d-block mx-auto rounded-circle" src="img/profile.png" alt="">
         <h1 class="text-uppercase mb-0">Alberto Zepeda</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">Ingeniero en sistemas | Desarrollador WEB | Entusiasta de Linux |
-            Humanitario</h2>
+        <h2 class="font-weight-light mb-0">Ingeniero en sistemas | Desarrollador WEB | Consultor EDI | Entusiasta de Linux |</h2>
     </div>
 </header>
 <section class="portfolio" id="sobremi">
